{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 4145,
  "lineage": "1b003695-6874-2a42-e7f0-b9bc0757bce0",
  "resources": [
    {
      "module": "module.document_db",
      "mode": "managed",
      "type": "aws_instance",
      "name": "rds_connector",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fef583e486727263",
            "arn": "arn:aws:ec2:eu-west-2:233966445372:instance/i-0b03558ed646726e0",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b03558ed646726e0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "KritagyaTerraform-document-db-credentials",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0140ff73225206979",
            "private_dns": "ip-10-123-1-239.eu-west-2.compute.internal",
            "private_ip": "10.123.1.239",
            "public_dns": "ec2-18-175-145-241.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.175.145.241",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b709da9432ce6bb5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0e7b54a3d59458035"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08ecd799ca3dbb6e1",
            "tags": {
              "Name": "document_db_instance"
            },
            "tags_all": {
              "Name": "document_db_instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e7b54a3d59458035"
            ]
          },
          "dependencies": [
            "module.document_db.aws_key_pair.document_db_instance_key",
            "module.document_db.aws_security_group.ec2_sg",
            "module.document_db.data.aws_ami.ubuntu-ami",
            "module.document_db.tls_private_key.document_db_instance_key",
            "module.vpc.aws_subnet.mtc_public_subnet",
            "module.vpc.aws_vpc.mtc_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.document_db",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:233966445372:security-group/sg-0e7b54a3d59458035",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              }
            ],
            "id": "sg-0e7b54a3d59458035",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ec2-public-access2025040615462902150000000c",
            "name_prefix": "ec2-public-access",
            "owner_id": "233966445372",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "EC2 Security Group"
            },
            "tags_all": {
              "Name": "EC2 Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-080424e43cca7ac1c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.mtc_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.document_db",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:233966445372:security-group/sg-0e5d6c778c7d159b1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e5d6c778c7d159b1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e7b54a3d59458035"
                ],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "rds-access2025040615463135530000000e",
            "name_prefix": "rds-access",
            "owner_id": "233966445372",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "RDS Security Group"
            },
            "tags_all": {
              "Name": "RDS Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-080424e43cca7ac1c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.document_db.aws_security_group.ec2_sg",
            "module.vpc.aws_vpc.mtc_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fef583e486727263",
            "arn": "arn:aws:ec2:eu-west-2:233966445372:instance/i-09c76e31982dca25e",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09c76e31982dca25e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "KeyEC2",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06e25d371e9b3c76a",
            "private_dns": "ip-10-123-2-230.eu-west-2.compute.internal",
            "private_ip": "10.123.2.230",
            "public_dns": "ec2-13-40-188-84.eu-west-2.compute.amazonaws.com",
            "public_ip": "13.40.188.84",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-03671db464f5a988a",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0edd318876dc286c4",
            "tags": {
              "Name": "tf-example"
            },
            "tags_all": {
              "Name": "tf-example"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ecc6da131d41aa6e"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "dependencies": [
            "module.ec2.aws_security_group.example_sg",
            "module.ec2.data.aws_ami.ubuntu_ami",
            "module.vpc.aws_subnet.mtc_public_subnet_2",
            "module.vpc.aws_vpc.mtc_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:233966445372:security-group/sg-0ecc6da131d41aa6e",
            "description": "Allow SSH, HTTP, and HTTPS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ecc6da131d41aa6e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "example-sg",
            "name_prefix": "",
            "owner_id": "233966445372",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-080424e43cca7ac1c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.mtc_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_module",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:233966445372:security-group/sg-029722f5c602e856e",
            "description": "Security group for ECS service",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-029722f5c602e856e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "terraform-ecs-sg",
            "name_prefix": "",
            "owner_id": "233966445372",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-080424e43cca7ac1c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.mtc_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.load-balancer_module",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nlb_eip_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06d19c85ddeacaa2f",
            "association_id": "eipassoc-034d62f0db30ac810",
            "domain": "vpc",
            "id": "eipalloc-06d19c85ddeacaa2f",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-08b21b21aadcd1af5",
            "private_dns": "ip-10-123-1-14.eu-west-2.compute.internal",
            "private_ip": "10.123.1.14",
            "public_dns": "ec2-18-130-128-98.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.130.128.98",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.load-balancer_module",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nlb_eip_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06aab9dedac505439",
            "association_id": "eipassoc-0d850ffe0bb3431b5",
            "domain": "vpc",
            "id": "eipalloc-06aab9dedac505439",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-07e62b0017a9d5271",
            "private_dns": "ip-10-123-2-107.eu-west-2.compute.internal",
            "private_ip": "10.123.2.107",
            "public_dns": "ec2-18-130-204-218.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.130.204.218",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.load-balancer_module",
      "mode": "managed",
      "type": "aws_lb",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:233966445372:loadbalancer/net/example/c73a5126feec848b",
            "arn_suffix": "net/example/c73a5126feec848b",
            "dns_name": "example-c73a5126feec848b.elb.eu-west-2.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:233966445372:loadbalancer/net/example/c73a5126feec848b",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "example",
            "subnet_mapping": [
              {
                "allocation_id": "eipalloc-06aab9dedac505439",
                "subnet_id": "subnet-0edd318876dc286c4"
              },
              {
                "allocation_id": "eipalloc-06d19c85ddeacaa2f",
                "subnet_id": "subnet-08ecd799ca3dbb6e1"
              }
            ],
            "subnets": [
              "subnet-08ecd799ca3dbb6e1",
              "subnet-0edd318876dc286c4"
            ],
            "vpc_id": "vpc-080424e43cca7ac1c",
            "zone_id": "ZD4D7Y8KGAS4G"
          },
          "dependencies": [
            "module.load-balancer_module.aws_eip.nlb_eip_1",
            "module.load-balancer_module.aws_eip.nlb_eip_2",
            "module.vpc.aws_subnet.mtc_public_subnet",
            "module.vpc.aws_subnet.mtc_public_subnet_2",
            "module.vpc.aws_vpc.mtc_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02b104f44eca02576",
            "association_id": "eipassoc-0932ace489488c509",
            "domain": "vpc",
            "id": "eipalloc-02b104f44eca02576",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-02136c5742ef03f4f",
            "private_dns": "ip-10-123-1-169.eu-west-2.compute.internal",
            "private_ip": "10.123.1.169",
            "public_dns": "ec2-35-179-39-112.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.179.39.112",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "mtc_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:233966445372:internet-gateway/igw-0b214d1366111f7df",
            "id": "igw-0b214d1366111f7df",
            "owner_id": "233966445372",
            "tags": {
              "Name": "dev-igw"
            },
            "tags_all": {
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-080424e43cca7ac1c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.mtc_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02b104f44eca02576",
            "connectivity_type": "public",
            "id": "nat-0177f1d524aad96b0",
            "network_interface_id": "eni-02136c5742ef03f4f",
            "private_ip": "10.123.1.169",
            "public_ip": "35.179.39.112",
            "subnet_id": "subnet-08ecd799ca3dbb6e1",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.example",
            "module.vpc.aws_internet_gateway.mtc_internet_gateway",
            "module.vpc.aws_subnet.mtc_public_subnet",
            "module.vpc.aws_vpc.mtc_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:233966445372:route-table/rtb-03410c27fe3e0785f",
            "id": "rtb-03410c27fe3e0785f",
            "owner_id": "233966445372",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0177f1d524aad96b0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PrivateRouteTable"
            },
            "tags_all": {
              "Name": "PrivateRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-080424e43cca7ac1c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.example",
            "module.vpc.aws_internet_gateway.mtc_internet_gateway",
            "module.vpc.aws_nat_gateway.example",
            "module.vpc.aws_subnet.mtc_public_subnet",
            "module.vpc.aws_vpc.mtc_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:233966445372:route-table/rtb-02d30b4fb41be692f",
            "id": "rtb-02d30b4fb41be692f",
            "owner_id": "233966445372",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b214d1366111f7df",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PublicRouteTable"
            },
            "tags_all": {
              "Name": "PublicRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-080424e43cca7ac1c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.mtc_internet_gateway",
            "module.vpc.aws_vpc.mtc_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ea7b0a33ccbb690",
            "route_table_id": "rtb-03410c27fe3e0785f",
            "subnet_id": "subnet-0f9ad854eacfd2183"
          },
          "dependencies": [
            "module.vpc.aws_eip.example",
            "module.vpc.aws_internet_gateway.mtc_internet_gateway",
            "module.vpc.aws_nat_gateway.example",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.mtc_private_subnet",
            "module.vpc.aws_subnet.mtc_public_subnet",
            "module.vpc.aws_vpc.mtc_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ebb3042de7569795",
            "route_table_id": "rtb-03410c27fe3e0785f",
            "subnet_id": "subnet-002b51cb2a213c288"
          },
          "dependencies": [
            "module.vpc.aws_eip.example",
            "module.vpc.aws_internet_gateway.mtc_internet_gateway",
            "module.vpc.aws_nat_gateway.example",
            "module.vpc.aws_route_table.private_rt",
            "module.vpc.aws_subnet.mtc_private_subnet2",
            "module.vpc.aws_subnet.mtc_public_subnet",
            "module.vpc.aws_vpc.mtc_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-089efb73047c4637c",
            "route_table_id": "rtb-02d30b4fb41be692f",
            "subnet_id": "subnet-08ecd799ca3dbb6e1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.mtc_internet_gateway",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.mtc_public_subnet",
            "module.vpc.aws_vpc.mtc_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-072862e79fdc8b559",
            "route_table_id": "rtb-02d30b4fb41be692f",
            "subnet_id": "subnet-0edd318876dc286c4"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.mtc_internet_gateway",
            "module.vpc.aws_route_table.public_rt",
            "module.vpc.aws_subnet.mtc_public_subnet_2",
            "module.vpc.aws_vpc.mtc_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mtc_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:233966445372:security-group/sg-0cc8e9e2cbff640c1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cc8e9e2cbff640c1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS traffic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-2025040615462903440000000d",
            "name_prefix": "terraform-",
            "owner_id": "233966445372",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "mtc_security_group"
            },
            "tags_all": {
              "Name": "mtc_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-080424e43cca7ac1c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.mtc_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mtc_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:233966445372:subnet/subnet-0f9ad854eacfd2183",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.123.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f9ad854eacfd2183",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "233966445372",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSubnet1"
            },
            "tags_all": {
              "Name": "PrivateSubnet1"
            },
            "vpc_id": "vpc-080424e43cca7ac1c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.mtc_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mtc_private_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:233966445372:subnet/subnet-002b51cb2a213c288",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.123.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002b51cb2a213c288",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "233966445372",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PrivateSubnet2"
            },
            "tags_all": {
              "Name": "PrivateSubnet2"
            },
            "vpc_id": "vpc-080424e43cca7ac1c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.mtc_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mtc_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:233966445372:subnet/subnet-08ecd799ca3dbb6e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.123.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08ecd799ca3dbb6e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "233966445372",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet1"
            },
            "tags_all": {
              "Name": "PublicSubnet1"
            },
            "vpc_id": "vpc-080424e43cca7ac1c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.mtc_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mtc_public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:233966445372:subnet/subnet-0edd318876dc286c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.123.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0edd318876dc286c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "233966445372",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "PublicSubnet2"
            },
            "tags_all": {
              "Name": "PublicSubnet2"
            },
            "vpc_id": "vpc-080424e43cca7ac1c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.mtc_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mtc_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:233966445372:vpc/vpc-080424e43cca7ac1c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.123.0.0/16",
            "default_network_acl_id": "acl-09315e08101e2274f",
            "default_route_table_id": "rtb-00cbb1aa5623a9258",
            "default_security_group_id": "sg-0956d776655468f83",
            "dhcp_options_id": "dopt-08ab0288eb8df5f53",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-080424e43cca7ac1c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00cbb1aa5623a9258",
            "owner_id": "233966445372",
            "tags": {
              "Name": "TerraformVPC"
            },
            "tags_all": {
              "Name": "TerraformVPC"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "bar",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:233966445372:vpc/vpc-0034e7f7f65ea1ae8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-04c2ce1cbe7171c8c",
            "default_route_table_id": "rtb-0dc213a60b0e87a80",
            "default_security_group_id": "sg-09c3e344ba03ce056",
            "dhcp_options_id": "dopt-08ab0288eb8df5f53",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0034e7f7f65ea1ae8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dc213a60b0e87a80",
            "owner_id": "233966445372"
          }
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "foo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:233966445372:vpc/vpc-0408ce0722b2f879a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.123.0.0/16",
            "default_network_acl_id": "acl-0cb9b3918d2ae5f56",
            "default_route_table_id": "rtb-04365dc47ae3423ef",
            "default_security_group_id": "sg-09c0da0c9879baca4",
            "dhcp_options_id": "dopt-08ab0288eb8df5f53",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0408ce0722b2f879a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04365dc47ae3423ef",
            "owner_id": "233966445372"
          }
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mtc_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:233966445372:vpc/vpc-0a0880238d4a57703",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-09a38a36db839ad2c",
            "default_route_table_id": "rtb-08a91829da46c2e02",
            "default_security_group_id": "sg-051863b85f0098621",
            "dhcp_options_id": "dopt-08ab0288eb8df5f53",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a0880238d4a57703",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08a91829da46c2e02",
            "owner_id": "233966445372",
            "tags": {
              "Name": "TerraformVPC2"
            },
            "tags_all": {
              "Name": "TerraformVPC2"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc2",
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "foo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-01c231b971007ffea",
            "peer_owner_id": "233966445372",
            "peer_region": "eu-west-2",
            "peer_vpc_id": "vpc-080424e43cca7ac1c",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Name": "VPC Peering between foo and bar"
            },
            "tags_all": {
              "Name": "VPC Peering between foo and bar"
            },
            "vpc_id": "vpc-0a0880238d4a57703"
          },
          "dependencies": [
            "module.vpc.aws_vpc.mtc_vpc",
            "module.vpc2.aws_vpc.mtc_vpc"
          ]
        }
      ]
    }
  ]
}